<resources>
    <string name="AutoUpdateService_download_success">Download success</string>
    <string name="AutoUpdateService_download_failed">Download failed</string>
    <string name="AutoUpdateService_download_start">Download start</string>
    <string name="AutoUpdateService_app_update">Update</string>
    <string name="ActivityMain_has_download_message">Update package is downloaded,update it now?</string>
    <string name="ActivityMain_negative_text">Cancel</string>
    <string name="ActivityMain_positive_text">OK</string>
    <string name="ActivityMain_new_versions_message">Have a latest version,would you like to update?</string>
    <string name="ActivityMain_upgrade_tips">Update</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola </item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Azores Islands</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnian and Herzegovina</item>
        <item>Botswana </item>
        <item>Brazil</item>
        <item>Britain</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central Africa</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo (Democratic Republic of Congo)</item>
        <item>Congo (The Republic of Congo)</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>"Côte d ' Ivoire"</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech</item>
        <item>Denmark </item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea (The State of Eritrea)</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji Islands</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>French Guiana</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland </item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya </item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Madeira Islands</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco </item>
        <item>Mozambique </item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway </item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama </item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Island</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion </item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe </item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa </item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Surinam</item>
        <item>Swaziland</item>
        <item>Sweden </item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Faroe Islands</item>
        <item>the Dominican Republic</item>
        <item>the Netherlands Antilles</item>
        <item>the United States</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>UAE</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Virgin Islands of the United States</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Fran?ais</item>
        <item>русский</item>
        <item>Espa?ol</item>
        <item>العربية</item>
        <item>Deutsch</item>
        <item>日本語</item>
        <item>Português</item>
        <item>Italiano</item>
        <item>ไทย</item>
        <item>한국어</item>
    </string-array>
    <string name="ActivityPayment_item">Item：ChineseChat coin</string>
    <string name="ActivityPayment_number">Quantity：%1$d</string>
    <string name="ActivityPayment_amount">Amount：%1$s</string>
    <string name="ActivityPayment_status">Status：</string>
    <string name="ActivitySecurity_title">Change your password</string>
    <string name="ActivitySecurity_old_password">Old password</string>
    <string name="ActivitySecurity_new_password">New password</string>
    <string name="ActivitySecurity_re_password">Confirm new password</string>
    <string name="ActivitySecurity_confirm">Confirm</string>
    <string name="ActivityHistory_theme">Topic：%1$s</string>
    <string name="ActivityHistory_teacher">Tutor：%1$s</string>
    <string name="ActivityHistory_coins">Cost：%1$d coins</string>
    <string name="ActivityHistory_duration">Duration：%1$s min</string>
    <string name="ActivityHistory_date">Date:</string>
    <string name="ActivityFeedback_title">Complaints</string>
    <string name="ActivityFeedback_please_type_something">Enter your complaints</string>
    <string name="ActivityFeedback_please_email">Enter your E-mail address</string>
    <string name="ActivityFeedback_Content_submit">Submit</string>
    <string name="ActivitySignIn_title">Login</string>
    <string name="ActivitySignIn_type_email">E-mail</string>
    <string name="ActivitySignIn_type_password">Password</string>
    <string name="ActivitySignIn_login">Login</string>
    <string name="ActivitySignIn_forgot_password">Forgot password?</string>
    <string name="ActivitySignIn_user_register">Registration</string>
    <string name="ActivitySignUp_title">Registration</string>
    <string name="ActivitySignUp_email">E-mail</string>
    <string name="ActivitySignUp_password">Password no less than 8 digits</string>
    <string name="ActivitySignUp_re_password">Confirm password</string>
    <string name="ActivitySignUp_read_and_agreed">I have read and accept</string>
    <string name="ActivitySignUp_registered_users">"Registered users, please "</string>
    <string name="ActivitySignUp_login">Login</string>
    <string name="ActivitySignUp_user_registration_agreement">Users Agreement</string>
    <string name="ActivitySignUp_next">Register</string>
</resources>