<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp">

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/ActivityPayment_item" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/ActivityPayment_number" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/ActivityPayment_amount" />


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/ActivityPayment_status" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="日期:2016-02-15 12:00:00" />
</LinearLayout>