<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00a478">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/home_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ActivitySignUp_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySignUp_email"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySignUp_password"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySignUp_re_password"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_is_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_box_check"
                android:paddingLeft="5dp"
                android:text="@string/ActivitySignUp_read_and_agreed"
                android:textColor="@color/color_app_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ActivitySignUp_user_registration_agreement"
                    android:textColor="@color/color_app" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#000" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/selector_button_signniup"
            android:enabled="false"
            android:text="@string/ActivitySignUp_next"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/bt_signup"
                android:layout_toRightOf="@id/bt_signup"
                android:text="@string/ActivitySignUp_registered_users"
                android:textColor="@color/color_app_normal" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/bt_signup"
                android:layout_toRightOf="@id/bt_signup"
                android:padding="2dp"
                android:text="@string/ActivitySignUp_login"
                android:textColor="@color/color_app"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>