<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00a478">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/home_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ActivityFeedback_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/shape_text_signinup"
        android:gravity="top"
        android:hint="@string/ActivityFeedback_please_type_something"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_text_signinup"
        android:hint="@string/ActivityFeedback_please_email"
        android:textSize="12sp" />


    <Button
        android:id="@+id/bt_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_button_signniup"
        android:enabled="true"
        android:text="@string/ActivityFeedback_Content_submit"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</LinearLayout>
