<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00a478">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/home_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ActivitySecurity_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:visibility="visible">


        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySecurity_old_password"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:typeface="monospace" />


        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySecurity_new_password"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@drawable/shape_text_signinup"
            android:hint="@string/ActivitySecurity_re_password"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/selector_button_signniup"
            android:enabled="true"
            android:text="@string/ActivitySecurity_confirm"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="monospace" />
    </LinearLayout>
</RelativeLayout>
