<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F0F0F0">

    <RelativeLayout
        android:id="@id/layout_title"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00a478">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/home_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ActivitySignIn_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/ll_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <AutoCompleteTextView
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_text_signinup"
                    android:completionThreshold="1"
                    android:hint="@string/ActivitySignIn_type_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="12sp"
                    android:typeface="monospace"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_username"/>

                <ImageView
                    android:id="@+id/iv_username_clear"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/icon_delete"
                    android:visibility="invisible"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_text_signinup"
                    android:hint="@string/ActivitySignIn_type_password"
                    android:inputType="textPassword"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="12sp"
                    android:typeface="monospace"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_password"/>

                <ImageView
                    android:id="@+id/iv_password_clear"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/icon_delete"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="25dp"
                android:background="@drawable/selector_button_signniup"
                android:enabled="true"
                android:text="@string/ActivitySignIn_login"
                android:textColor="#FFFFFF"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/ActivitySignIn_forgot_password"
                    android:textColor="@color/color_app"/>

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/ActivitySignIn_user_register"
                    android:textColor="@color/color_app"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>